tests/format/misc/errors/js/import-assertions/invalid-default-named-import.mjs
import module foo, {bar} from "./module.wasm";
